fixed the alignment issue

--- a/styles.css
+++ b/styles.css
@@ -462,13 +462,10 @@ img {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  /* flex-wrap: wrap; */
   gap: 8px;
 }
 
 .mobile-first-row .title-time .product-title {
-  /* flex: 1; */
-  /* width: 100%; */
   white-space: nowrap;
 }
 
@@ -476,8 +473,6 @@ img {
   font-size: 12px;
   color: #008000;
   text-align: right;
-  /* background-color: #f003; */
-  /* min-width: 110px; */
 }
 
 .second-row.mobile-second-row .minutes-ago-text {
@@ -550,7 +545,9 @@ img {
   .title-and-prices {
     display: flex;
     flex-direction: column;
-    
+  }
+  .product-price-and-specs .ppas-price {
+    line-height: 21px;
   }
   .product-price-and-specs {
     align-items: flex-start;
@@ -599,6 +596,9 @@ img {
     display: unset;
   }
 
+  .product-price-and-specs .ppas-price {
+    line-height: unset;
+  }
   .product-price-and-specs .ppas-price,
   .product-price-and-specs .ppas-starting,
   .product-price-and-specs .ppas-offers {
